tests/paczka1/small_fuzzy/77044595.err
Error in line 1: 7qLnBM A203 4,19
Error in line 7: A7Bx4eRZcaE A203 68,2
